--- a/restaurantes.html
+++ b/restaurantes.html
@@ -42,59 +42,52 @@
         <p>Esta sessão é dedicada para divulgar os restaurantes e marmitarias vegetarianos de Fortaleza.</p>
         <div class="lojas">
             <h3>Rango Verde</h3>
-            <p>Como eles próprios falam, o preço reflete a militância. O restaurante é maravilhoso, são veganos por amor aos animais. No cardápio do Rango, encontramos almoço, salgados, sobremesas e sucos. A comida é muito saborosa e o ambiente muito agradável.</p>
-            <p>É, na minha opinião, um dos melhores restaurantes veganos da cidade.</p>
+            <p>Almoço e lanches.</p>
             <p>Endereço: Rua João Gentil, 207, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Pimenta Vegana</h3>
-            <p>Um dos melhores restaurantes veganos de Fortaleza. A comida é muito saborosa e o preço bastante acessível.</p>
-            <p>No cardápio encontramos almoço e lanches. Também possuem uma carta de encomendas com salgadinhos, pizzas, pães, tortas, bolos, etc.</p>
-            <p>Participam da <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank"> Feira Agroecológica do Benfica</a>, que ocorre quinzenalmente e onde podemos encontrar várias opções de lanches veganos.</p>
-            <p>Endereço: Rua Confúcio Pamplona, 339, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+            <p>Almoço e lanches.</p>
         </div>
         <div class="lojas">
             <h3>Annapurna</h3>
-            <p>Restaurante vegetariano com menu inspirado na culinária internacional. Todo dia são novas temáticas para você escolher. A refeição acompanha sopa e suco e pode repetir à vontade.</p>
+            <p>Almoço.</p>
             <p>Adoro o Annapurna, indico demais!</p>
             <p>Endereço: Rua Paracuru, 34 - Centro</p>
             <p>Clique <a href="https://instagram.com/annapurnairacema?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Mandir</h3>
-            <p>Um dos restaurantes vegetarianos mais antigos de Fortaleza. Culinária indiana. Muito bom!</p>
+            <p>Almoço.</p>
             <p>Endereço: Rua Padre Francisco Pinto, 257, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Govinda</h3>
-            <p>Comida elaborada com base na Medicina Ayurvédica. Deliciosa!</p>
-            <p>Somente delivery</p>
+            <p>Almoço delivery.</p>
             <p>Clique <a href="https://instagram.com/govindavegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
             <p>Clique <a href="https://instagram.com/govindagilberto?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o outro perfil.</p>
         </div>
         <div class="lojas">
             <h3>Terrana</h3>
-            <p>Almoço vegano. Ótima comida!</p>
-            <p>Endereço: Rua Marco, 309 - n. 05, Montese - Fortaleza</p>
+            <p>Almoço delivery.</p>
             <p>Clique <a href="https://instagram.com/terrana.vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Buendia</h3>
-            <p>Marmitaria vegana. Delivery.</p>
-            <p>Somente delivery.</p>
+            <p>Almoço delivery.</p>
             <p>Clique <a href="https://instagram.com/buendiacomidavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Malaguetta</h3>
+            <p>Almoço.</p>
             <p>Endereço: Rua João Gentil, 241, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Pachamama Cultural</h3>
-            <p>Funciona à noite.</p>
+            <p>Funciona à noite. Jantar e pestiscos.</p>
             <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
