--- a/confeitarias.html
+++ b/confeitarias.html
@@ -42,7 +42,7 @@
         <p>Sessão destinada a indicar confeitarias que não utilizam produtos de origem animal.</p>
         <div class="lojas">
             <h3>Borges Baker</h3>
-            <p>Bolos e doces maravilhosos! Trabalham apenas sob encomenda.</p>
+            <p>Bolos e doces! Trabalham apenas sob encomenda.</p>
             <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
             <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
