--- a/onde-comer.html
+++ b/onde-comer.html
@@ -55,7 +55,7 @@
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana</a> (Somente por encomenda!)</li>   
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/nalu_pizzas?igshid=MzRlODBiNWFlZA==" target="_blank">Nalu</a></li>
-                <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio´s Napoletan</a></li>
+                <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio´s Napoletan</a> (Muito boa!)</li>
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
             </ul>    
         </div>
