--- a/restaurantes.html
+++ b/restaurantes.html
@@ -49,6 +49,8 @@
         <div class="lojas">
             <h3>Pimenta Vegana</h3>
             <p>Almoço e lanches.</p>
+            <p>Endereço: Rua Confúcio Pamplona, 339, Benfica - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Annapurna</h3>
