--- a/restaurantes.html
+++ b/restaurantes.html
@@ -55,7 +55,6 @@
         <div class="lojas">
             <h3>Annapurna</h3>
             <p>Almoço.</p>
-            <p>Adoro o Annapurna, indico demais!</p>
             <p>Endereço: Rua Paracuru, 34 - Centro</p>
             <p>Clique <a href="https://instagram.com/annapurnairacema?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
@@ -89,13 +88,12 @@
         </div>
         <div class="lojas">
             <h3>Pachamama Cultural</h3>
-            <p>Funciona à noite. Jantar e pestiscos.</p>
+            <p>Jantar e pestiscos.</p>
             <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Quintal de Comida</h3>
-            <p>Restaurante vegano e ovolactovegetariano. Funcionamento presencial de quinta a sábado, das 16:00 às 22:00.</p>
             <p>Endereço: Rua Miguel Gonçalves, 195, Montese - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/quintaldecomida?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
@@ -111,12 +109,12 @@
         </div>
         <div class="lojas">
             <h3>The Veggie</h3>
-            <p>Pedidos pelo iFood.</p>
+            <p>Almoço delivery.</p>
             <p>Clique <a href="https://instagram.com/theveggiefor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Agni Cozinha Vegetariana</h3>
-            <p>Congelados vegetarianos e veganos.</p>
+            <p>Refeições congeladas.</p>
             <p>Endereço: Rua Hermano Vasconcelos, 327 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/agnicozinhavegetariana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
     </main>
