--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -47,7 +47,7 @@
         </div>
         <div class="lojas">
             <h3>Bike Vegan</h3>
-            <p>Lanches veganos.</p>
+            <p>Lanches diversos.</p>
             <p>Somente delivery.</p>
             <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
