--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>Desenvolvido por Flávia Reis.</p>
         <p>Contato: flaviarster@gmail.com</p>
         <p>Fortaleza, Ceará.</p>
-        <p>Última atualização em: Janeiro/2014.</p>
+        <p>Última atualização: Janeiro/2014.</p>
     </footer>
 </body>
 </html>
