--- a/onde-comer.html
+++ b/onde-comer.html
@@ -120,6 +120,7 @@
         <div class="lojas">
             <h2>Hamburguer!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/xbloom_iguatemibosque?igsh=bjR0dzljYzQycHMy">XBloom</a> (Opção no Iguatemi)</li>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
