--- a/confeitarias.html
+++ b/confeitarias.html
@@ -72,6 +72,10 @@
             <h3>Do Futuro Confeitaria</h3>
             <p>Clique <a href="https://instagram.com/dofuturoconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Marjorie Serra</h3>
+            <p>Clique <a href="https://www.instagram.com/marjorielserra?igsh=cHlrbzdpZ3B3ODFq" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
