--- a/onde-comer.html
+++ b/onde-comer.html
@@ -66,6 +66,7 @@
                 <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li> 
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li> 
                 <li><a href="https://instagram.com/chinatownfortaleza?igshid=MWs3aHI3bDg0bThqbw==" target="_blank">Chinatown</a></li>
+                <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
             </ul>
         </div>
         <div class="lojas">
