--- a/onde-comer.html
+++ b/onde-comer.html
@@ -74,6 +74,7 @@
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">Café Cultive</a></li>
+                <li><a href="https://www.instagram.com/heyjoefoodnbar?igsh=MXZkdmc3c3pnajE3OA==" target="_blank">Hey Joe</a></li>
             </ul>
         </div>
         <div class="lojas">
@@ -130,6 +131,8 @@
                 <li><a href="https://instagram.com/vaniaburgers?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vânia Burgers</a> (Opção no Dragão do Mar)</li>   
                 <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
+                <li><a href="https://www.instagram.com/orbitabluebar?igsh=MWN2emU3azZqejJ2cQ==" target="_blank">Órbita Blue</a> (Opção na Praia do Futuro)</li>
+                <li><a href="https://www.instagram.com/heyjoefoodnbar?igsh=MXZkdmc3c3pnajE3OA==" target="_blank">Hey Joe</a></li>
             </ul>
         </div>
         <div class="lojas">
@@ -144,6 +147,7 @@
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
                 <li><a href="https://instagram.com/casapatua?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Patuá</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
+                <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
             </ul>
         </div>
         <div class="lojas">
@@ -159,12 +163,14 @@
             <ul>
                 <li><a href="https://instagram.com/cozinha.lamarca?igshid=YTQwZjQ0NmI0OA==" target="_blank">Cozinha Lamarca</a></li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=YTQwZjQ0NmI0OA==">A Quitanda</a></li> 
+                <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
                 <li><a href="https://instagram.com/paris6fortaleza_oficial?igshid=YTQwZjQ0NmI0OA==">Paris 6</a></li>
             </ul>
         </div>
         <div class="lojas">
             <h2>Feijoada!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca Cabumba</a> (Opção na Praia do Futuro)</li>
                 <li><a href="https://instagram.com/forneriadapraia?igshid=YTQwZjQ0NmI0OA==">Forneria da Praia</a></li> 
             </ul>
         </div>
