--- a/sorvetes.html
+++ b/sorvetes.html
@@ -54,6 +54,10 @@
             <h3>Bacio di Latte</h3>
             <p>Clique <a href="https://instagram.com/baciodilatte?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Yozenn</h3>
+            <p>Clique <a href="https://www.instagram.com/yozenn?igsh=dzZxbDkzZTZwdWU3" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
