--- a/onde-comer.html
+++ b/onde-comer.html
@@ -65,7 +65,7 @@
             <ul>
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li>
                 <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li> 
-                <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li> 
+                <li><a href="https://www.instagram.com/restauranteryori?igsh=eWJlbXFrZWYxdWlv" target="_blank">Ryori</a>(Opção no Iguatemi)</li> 
                 <li><a href="https://instagram.com/chinatownfortaleza?igshid=MWs3aHI3bDg0bThqbw==" target="_blank">Chinatown</a></li>
                 <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
             </ul>
