--- a/onde-comer.html
+++ b/onde-comer.html
@@ -83,7 +83,8 @@
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
-                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>   
+                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>
+                <li><a href="https://www.instagram.com/hortalicia?igsh=ZTJsNXFtNWd2OXdr" target="_blank">Hortalícia</a></li>   
             </ul>
         </div>
         <div class="lojas">
@@ -100,7 +101,9 @@
             <h2>Pastel!</h2>
             <ul>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
-                <li><a href="https://instagram.com/_sampastel?igshid=MzRlODBiNWFlZA==" target="_blank">Sampastel</a></li>   
+                <li><a href="https://instagram.com/_sampastel?igshid=MzRlODBiNWFlZA==" target="_blank">Sampastel</a></li>
+                <li><a href="https://www.instagram.com/pastelleoficial?igsh=em5tYXQ5bHJiMXR5" target="_blank">Pastelle</a></li>
+                <li><a href="https://www.instagram.com/guanabarapastelaria?igsh=YmI2NzVzc2k0dmEz" target="_blank">Guanabara Pastelaria</a></li>   
             </ul>
         </div>
         <div class="lojas">
