--- a/onde-comer.html
+++ b/onde-comer.html
@@ -95,6 +95,8 @@
                 <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>
                 <li><a href="https://www.instagram.com/vemquetamassa?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tá Massa</a></li>  
                 <li><a href="https://instagram.com/nomarderosas?igshid=YTQwZjQ0NmI0OA==" target="_blank">Mar de Rosas</a></li> 
+                <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
+                <li><a href="https://www.instagram.com/massadocheff_delivery?igsh=MTZ6MnBnNmk2azVrMw==" target="_blank">Massa do Cheff</a></li>
             </ul>
         </div>
         <div class="lojas">
