--- a/onde-comer.html
+++ b/onde-comer.html
@@ -97,6 +97,7 @@
                 <li><a href="https://instagram.com/nomarderosas?igshid=YTQwZjQ0NmI0OA==" target="_blank">Mar de Rosas</a></li> 
                 <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
                 <li><a href="https://www.instagram.com/massadocheff_delivery?igsh=MTZ6MnBnNmk2azVrMw==" target="_blank">Massa do Cheff</a></li>
+                <li><a href="https://www.instagram.com/casulogastrobar?igsh=MWw2d2ZkN2R2YWJiYw==" target="_blank">Casulo</a></li>
             </ul>
         </div>
         <div class="lojas">
