--- a/onde-comer.html
+++ b/onde-comer.html
@@ -114,7 +114,9 @@
             <ul>
                 <li><a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">Rango Verde</a></li>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
-                <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li>   
+                <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li> 
+                <li><a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">Dorear</a></li>
+                <li><a href="https://www.instagram.com/amordecafe_?igsh=bnBidTB2MDEyejdt" target="_blank">Amor de Café</a></li>  
             </ul>
         </div>
         <div class="lojas">
