--- a/onde-comer.html
+++ b/onde-comer.html
@@ -117,6 +117,7 @@
                 <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li> 
                 <li><a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">Dorear</a></li>
                 <li><a href="https://www.instagram.com/amordecafe_?igsh=bnBidTB2MDEyejdt" target="_blank">Amor de Café</a></li>  
+                <li><a href="https://www.instagram.com/sucrebrasil?igsh=dHYzNmVsc3J0NGNi" target="_blank">Sucré</a></li>
             </ul>
         </div>
         <div class="lojas">
