--- a/onde-comer.html
+++ b/onde-comer.html
@@ -191,6 +191,7 @@
                 <li><a href="https://instagram.com/saladeria?igshid=YTQwZjQ0NmI0OA==" target="_blank">Saladeria</a></li>
                 <li><a href="https://instagram.com/soodelibr?igshid=YTQwZjQ0NmI0OA==">Soodeli</a></li> 
                 <li><a href="https://instagram.com/sevensalads.ce?igshid=YTQwZjQ0NmI0OA==">Seven Salads</a></li>
+                <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
             </ul>
         </div>
         <div class="lojas">
