--- a/onde-comer.html
+++ b/onde-comer.html
@@ -195,6 +195,20 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Comida Mexicana!</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/labandolerafortaleza?igsh=ZHI4cTU4cDdianUy">La Bandolera</a></li>
+                <li><a href="https://www.instagram.com/mexburritosbr?igsh=NXpvOWYzc295YWY0" target="_blank">Mex Burritos</a></li>   
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Comida Árabe!</h2>
+            <ul>
+                <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
+                <li><a href="https://instagram.com/amelieresto?igshid=MzRlODBiNWFlZA==" target="_blank">Amelie Restô</a></li>   
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Self Service!</h2>
             <ul>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
