--- a/onde-comer.html
+++ b/onde-comer.html
@@ -204,8 +204,9 @@
         <div class="lojas">
             <h2>Comida Árabe!</h2>
             <ul>
-                <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
-                <li><a href="https://instagram.com/amelieresto?igshid=MzRlODBiNWFlZA==" target="_blank">Amelie Restô</a></li>   
+                <li><a href="https://www.instagram.com/lazizarabicfood?igsh=MWM2aGU3MWgxOGx4dg==">Laziz Arabic Food</a></li>
+                <li><a href="https://www.instagram.com/comidaarabefortaleza?igsh=MWJpYWcza3RwM29kZw==" target="_blank">Comida Árabe Fortaleza</a></li>
+                <li><a href="https://www.instagram.com/zahlemezze?igsh=ZjluMzdwYjh4MnZ1" target="_blank">Zahlé Mezze</a></li>   
             </ul>
         </div>
         <div class="lojas">
