--- a/onde-comer.html
+++ b/onde-comer.html
@@ -198,6 +198,7 @@
             <h2>Comida Mexicana!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/labandolerafortaleza?igsh=ZHI4cTU4cDdianUy">La Bandolera</a></li>
+                <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
                 <li><a href="https://www.instagram.com/mexburritosbr?igsh=NXpvOWYzc295YWY0" target="_blank">Mex Burritos</a></li>   
             </ul>
         </div>
