--- a/onde-comer.html
+++ b/onde-comer.html
@@ -207,7 +207,8 @@
             <ul>
                 <li><a href="https://www.instagram.com/lazizarabicfood?igsh=MWM2aGU3MWgxOGx4dg==">Laziz Arabic Food</a></li>
                 <li><a href="https://www.instagram.com/comidaarabefortaleza?igsh=MWJpYWcza3RwM29kZw==" target="_blank">Comida Árabe Fortaleza</a></li>
-                <li><a href="https://www.instagram.com/zahlemezze?igsh=ZjluMzdwYjh4MnZ1" target="_blank">Zahlé Mezze</a></li>   
+                <li><a href="https://www.instagram.com/zahlemezze?igsh=ZjluMzdwYjh4MnZ1" target="_blank">Zahlé Mezze</a></li>  
+                <li><a href="https://www.instagram.com/olimporestaurante_?igsh=d2E5Z21kdmhtMWZ4" target="_blank">Olimpo</a></li>  
             </ul>
         </div>
         <div class="lojas">
