--- a/onde-comer.html
+++ b/onde-comer.html
@@ -192,6 +192,7 @@
                 <li><a href="https://instagram.com/soodelibr?igshid=YTQwZjQ0NmI0OA==">Soodeli</a></li> 
                 <li><a href="https://instagram.com/sevensalads.ce?igshid=YTQwZjQ0NmI0OA==">Seven Salads</a></li>
                 <li><a href="https://www.instagram.com/restaurante_vitae?igsh=emVtd2s1Mjh2dXht">Vitaê</a></li>
+                <li><a href="https://www.instagram.com/soulfitjuicebar?igsh=MWprOWhlOHZ6NGdhZw==">Soul Fit Juice Bar</a></li>
             </ul>
         </div>
         <div class="lojas">
