--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -93,6 +93,11 @@
             <p>Clique <a href="https://www.instagram.com/veggostosuras?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Platino Alquimia</h3>
+            <p>Tempês e Homus</p>
+            <p>Clique <a href="https://www.instagram.com/platinoalquimia?igsh=bGxlNXNzaHQ0OTNx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Las Crias</h3>
             <p>Clique <a href="https://www.instagram.com/las_crias_vegan?igsh=eXB0dTF2eDZhamNp" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
