--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -94,7 +94,7 @@
         </div>
         <div class="lojas">
             <h3>Platino Alquimia</h3>
-            <p>Tempês e Homus</p>
+            <p>Tempês e Homus.</p>
             <p>Clique <a href="https://www.instagram.com/platinoalquimia?igsh=bGxlNXNzaHQ0OTNx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
