--- a/emporios.html
+++ b/emporios.html
@@ -58,6 +58,10 @@
             <p>Endereço: Shopping RioMar - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/amosoulveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Holos Poder de Nutrir</h3>
+            <p>Clique <a href="https://www.instagram.com/holospoderdenutrir?igsh=emVvaHp1OGxiMGtt" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
