--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -98,6 +98,10 @@
             <p>Clique <a href="https://www.instagram.com/platinoalquimia?igsh=bGxlNXNzaHQ0OTNx" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Yog'n'Bake</h3>
+            <p>Clique <a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Las Crias</h3>
             <p>Clique <a href="https://www.instagram.com/las_crias_vegan?igsh=eXB0dTF2eDZhamNp" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
