--- a/restaurantes.html
+++ b/restaurantes.html
@@ -117,6 +117,11 @@
             <p>Refeições congeladas.</p>
             <p>Endereço: Rua Hermano Vasconcelos, 327 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/agnicozinhavegetariana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Rango Popular</h3>
+            <p>Clique <a href="https://www.instagram.com/rangopopular?igsh=NWx3dmo1OXB5dGM1" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
