--- a/onde-comer.html
+++ b/onde-comer.html
@@ -45,17 +45,16 @@
             <h2>Pizza!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
-                <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar</a> (A melhor pizza, na minha opinião!)</li>
+                <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar</a></li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Head</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
-                <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana</a> (Somente por encomenda!)</li>   
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/nalu_pizzas?igshid=MzRlODBiNWFlZA==" target="_blank">Nalu</a></li>
-                <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio´s Napoletan</a> (Muito boa!)</li>
+                <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio's Napoletan</a></li>
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
                 <li><a href="https://www.instagram.com/mattarellopizza?igsh=MXJ5ZTVyZjhiYTcxNQ==" target="_blank">Mattarello Pizza</a></li>
             </ul>    
@@ -65,7 +64,7 @@
             <ul>
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li>
                 <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li> 
-                <li><a href="https://www.instagram.com/restauranteryori?igsh=eWJlbXFrZWYxdWlv" target="_blank">Ryori</a>(Opção no Iguatemi)</li> 
+                <li><a href="https://www.instagram.com/restauranteryori?igsh=eWJlbXFrZWYxdWlv" target="_blank">Ryori</a> (Opção no Iguatemi)</li> 
                 <li><a href="https://instagram.com/chinatownfortaleza?igshid=MWs3aHI3bDg0bThqbw==" target="_blank">Chinatown</a></li>
                 <li><a href="https://www.instagram.com/yakiway?igsh=MXJ5bGViamljNzJtNA==" target="_blank">Yaki Way</a></li>
             </ul>
