--- a/onde-comer.html
+++ b/onde-comer.html
@@ -97,6 +97,7 @@
                 <li><a href="https://instagram.com/nomarderosas?igshid=YTQwZjQ0NmI0OA==" target="_blank">Mar de Rosas</a></li> 
                 <li><a href="https://www.instagram.com/raizcozinhabrasileira?igsh=MXQzbWplazhzbzk1bg==" target="_blank">Raiz</a></li>
                 <li><a href="https://www.instagram.com/massadocheff_delivery?igsh=MTZ6MnBnNmk2azVrMw==" target="_blank">Massa do Cheff</a></li>
+                <li><a href="https://www.instagram.com/spoleto_oficial?igsh=ZTl4NWl5a29vNnFu" target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
             </ul>
         </div>
         <div class="lojas">
