--- a/dicas.html
+++ b/dicas.html
@@ -82,7 +82,7 @@
         <div class="lojas">
             <h2>Nutricionistas</h2>
             <ul>
-                <li><a href="https://instagram.com/nutribrunoandrade?igshid=MzRlODBiNWFlZA==" target="_blank">Bruno Andrade</a></li>
+                <li><a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">Bruno Andrade</a></li>
                 <li><a href="https://instagram.com/lauranutrivegana?igshid=MzRlODBiNWFlZA==" target="_blank">Laura Braga</a></li>  
                 <li><a href="https://instagram.com/nutricionista_vegana?igshid=MzRlODBiNWFlZA==" target="_blank">Sara Ortins</a></li> 
                 <li><a href="https://instagram.com/lucasnutriveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">Lucas Martins</a></li> 
