--- a/confeitarias.html
+++ b/confeitarias.html
@@ -76,6 +76,10 @@
             <h3>Marjorie Serra</h3>
             <p>Clique <a href="https://www.instagram.com/marjorielserra?igsh=cHlrbzdpZ3B3ODFq" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Opa! Doces Veganos</h3>
+            <p>Clique <a href="https://www.instagram.com/opadocesveganos?igsh=MWJmMnUxNGt6a2J6Yg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
