--- a/dicas.html
+++ b/dicas.html
@@ -73,11 +73,13 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Opções veganas em outros municípios cearenses</h2>
+            <h2>Pousadas e opções veganas em outros municípios cearenses</h2>
             <ul>
-                <li><a href="https://www.instagram.com/itacupa_vegan_center?igsh=ZTBxNDd2Y2h3bGR3" target="_blank">Itacupa</a> (Tabuba)</li>
+                <li><a href="https://www.instagram.com/itacupa_vegan_center?igsh=ZTBxNDd2Y2h3bGR3" target="_blank">Pousada Itacupa</a> (Tabuba)</li>
+                <li><a href="https://www.instagram.com/jardimdovento?igsh=MXQ4ZDdxODY3cXlyaA==" target="_blank">Hotel Jardim do Vento</a> (Icaraí de Amontada)</li>  
                 <li><a href="https://www.instagram.com/casaveg.eco?igsh=MTZ4NW55ZHMwN21kdg==" target="_blank">Casaveg</a> (Canoa Quebrada)</li>
-                <li><a href="https://www.instagram.com/jardimdovento?igsh=MXQ4ZDdxODY3cXlyaA==" target="_blank">Jardim do Vento</a> (Icaraí de Amontada)</li>  
+                <li><a href="https://www.instagram.com/flechadamata/" target="_blank">Eco Aldeia Flecha da Mata</a> (Aracati)</li>
+                <li><a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA==" target="_blank">Sítio do Vale da Biodiversidade</a> (Mulungu)</li>
                 <li><a href="https://www.instagram.com/benzida_?igsh=MXg3Z2llYm45bDN2Zw==" target="_blank">Benzida</a> (Icaraí de Amontada)</li>
             </ul>
         </div>
