--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -82,6 +82,10 @@
             <h3>Calêndula</h3>
             <p>Clique <a href="https://instagram.com/calendula_cosmeticos_naturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Produtos Naturalis</h3>
+            <p>Clique <a href="https://www.instagram.com/produtos.naturalis?igsh=b2k0MzY3eWNtc2Jk" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
         <br>
         <h1 class="titulos-categorias">Produtos de Limpeza</h1>
         <div class="lojas">
