--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -67,6 +67,11 @@
             <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Simple Organic</h3>
+            <p>Shopping RioMar</p>
+            <p>Clique <a href="https://www.instagram.com/fortalezasimpleorganic?igsh=MTEyeDZ1emRnZjRvYg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Aroma de Nuvem</h3>
             <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
