--- a/restaurantes.html
+++ b/restaurantes.html
@@ -122,6 +122,10 @@
             <h3>Rango Popular</h3>
             <p>Clique <a href="https://www.instagram.com/rangopopular?igsh=NWx3dmo1OXB5dGM1" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Deliveggie</h3>
+            <p>Clique <a href="https://www.instagram.com/deliveggie_ce?igsh=MWFrd3FpZ2l0MjdwaA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
