--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 <body onresize="mudouTamanho">
     
     <header>
-        <h1>Bizu Vegano</h1>
-        <h2>Guia vegano de Fortaleza</h2>
+        <div class="header-container">
+            <div class="image-container"><img src="./imagens/logopng2.png" alt="Logo do site"></div>
+            <div class="titles-container">
+                <h1>Bizu Vegano</h1>
+                <h2>Guia vegano de Fortaleza</h2>
+            </div>
+        </div>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
