--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -84,6 +84,10 @@
             <p>Clique <a href="https://instagram.com/meu.eco_?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Folha de Arruda</h3>
+            <p>Clique <a href="https://www.instagram.com/folhadearruda?igsh=MW83a3Zqd3Rlbm91eg==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Calêndula</h3>
             <p>Clique <a href="https://instagram.com/calendula_cosmeticos_naturais?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
