--- a/dicas.html
+++ b/dicas.html
@@ -166,7 +166,7 @@
             <p>Outra coisa que eu adoro é o cheddar vegano da marca Junior. Encontro para vender na <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA==" target="_blank">The Veggies On The Table</a>.</p>
         </div>
         <div class="lojas">
-            <h2>Receitinha rápida e prática para subistituir o pão</h2>
+            <h2>Receitinha rápida e prática para substituir o pão</h2>
             <h3>Tapioca de Cuscuz</h3>
             <h4>Ingredientes:</h4>
             <ul>
