Corrigi erros de digitação

--- a/dicas.html
+++ b/dicas.html
@@ -187,7 +187,7 @@
         </div>
     </div>
     <div class="lojas">
-        <h2>Receita de Legumes ao forno com azeite</h2>
+        <h2>Receita de legumes ao forno com azeite</h2>
         <h4>Ingredientes:</h4>
         <ul>
             <li>1 cebola picada</li>
