--- a/onde-comer.html
+++ b/onde-comer.html
@@ -39,8 +39,8 @@
     </header>
     
     <main>
-        <p>Nessa sessão listei, por categoria de comida, alguns estabelecimentos veganos e não veganos, que oferecem opções vegetarianas no cardápio.</p>
-        <p>Seja direcionado ao Instagram da loja, ao clicar em cima do nome do estabelecimento.</p>
+        <p>Nesta sessão listei, por categoria de comida, alguns estabelecimentos veganos e não veganos, que oferecem opções vegetarianas no cardápio.</p>
+        <p>Seja direcionado(a) ao Instagram da loja, ao clicar em cima do nome do estabelecimento.</p>
         <div class="lojas">
             <h2>Pizza!</h2>
             <ul>
