--- a/confeitarias.html
+++ b/confeitarias.html
@@ -65,6 +65,10 @@
             <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Florescer</h3>
+            <p>Clique <a href="https://www.instagram.com/florescer.confeitaria?igsh=MXJpMGxrNWt0cmFhZw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Madeleine Confeitaria</h3>
             <p>Clique <a href="https://instagram.com/madeleineconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
