--- a/confeitarias.html
+++ b/confeitarias.html
@@ -66,6 +66,7 @@
         </div>
         <div class="lojas">
             <h3>Florescer</h3>
+            <p>Pedidos sob encomenda.</p>
             <p>Clique <a href="https://www.instagram.com/florescer.confeitaria?igsh=MXJpMGxrNWt0cmFhZw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
@@ -74,6 +75,7 @@
         </div>
         <div class="lojas">
             <h3>Do Futuro Confeitaria</h3>
+            <p>Pedidos sob encomenda.</p>
             <p>Clique <a href="https://instagram.com/dofuturoconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
