--- a/onde-comer.html
+++ b/onde-comer.html
@@ -52,6 +52,7 @@
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Opção no RioMar)</li>
+                <li><a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">Dorear</a> (Opção no RioMar)</li>
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/nalu_pizzas?igshid=MzRlODBiNWFlZA==" target="_blank">Nalu</a></li>
                 <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio's Napoletan</a></li>
