--- a/onde-comer.html
+++ b/onde-comer.html
@@ -45,6 +45,7 @@
             <h2>Pizza!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
+                <li><a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">Yog'n'Bake</a></li>
                 <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar</a></li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
