--- a/cafes.html
+++ b/cafes.html
@@ -87,6 +87,12 @@
             <p>Endereço: Shopping Iguatemi e Shopping RioMar Papicu.</p>
             <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Dengo</h3>
+            <p>Chocolate quente, cappuccino e chocolate em barra.</p>
+            <p>Endereço: Shopping Iguatemi.</p>
+            <p>Clique <a href="https://www.instagram.com/dengochocolates?igsh=MWlmazd5Z3ljNm83Mw==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
