--- a/onde-comer.html
+++ b/onde-comer.html
@@ -42,7 +42,7 @@
         <p>Nesta sessão listei, por categoria de comida, alguns estabelecimentos veganos e não veganos, que oferecem opções vegetarianas no cardápio.</p>
         <p>Seja direcionado(a) ao Instagram da loja, ao clicar em cima do nome do estabelecimento.</p>
         <div class="lojas">
-            <h2>Pizza!</h2>
+            <h2>Pizza e Calzone!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
                 <li><a href="https://www.instagram.com/yognbake?igsh=MWV2OTNleXJ0M2o1Yg==" target="_blank">Yog'n'Bake</a></li>
@@ -59,6 +59,7 @@
                 <li><a href="https://instagram.com/afranio_napoletanpizza?igshid=YTQwZjQ0NmI0OA==" target="_blank">Afranio's Napoletan</a></li>
                 <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
                 <li><a href="https://www.instagram.com/mattarellopizza?igsh=MXJ5ZTVyZjhiYTcxNQ==" target="_blank">Mattarello Pizza</a></li>
+                <li><a href="https://www.instagram.com/minikalzone?igsh=cHBoZXU4ZXoyazRr" target="_blank">Mini Kalzone</a> (Tem em vários shoppings)</li>
             </ul>    
         </div>
         <div class="lojas">
@@ -89,7 +90,7 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Massas!</h2>
+            <h2>Massa!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/casulogastrobar?igsh=MWw2d2ZkN2R2YWJiYw==" target="_blank">Casulo</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
@@ -148,6 +149,13 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Sanduíche!</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
+                <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw==" target="_blank">Subway</a> (Tem em vários shoppings)</li>   
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Petiscos!</h2>
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
@@ -202,8 +210,7 @@
             <h2>Comida Mexicana!</h2>
             <ul>
                 <li><a href="https://www.instagram.com/labandolerafortaleza?igsh=ZHI4cTU4cDdianUy">La Bandolera</a></li>
-                <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA==" target="_blank">Ventana</a></li>
-                <li><a href="https://www.instagram.com/mexburritosbr?igsh=NXpvOWYzc295YWY0" target="_blank">Mex Burritos</a></li>   
+                <li><a href="https://www.instagram.com/mexburritosbr?igsh=NXpvOWYzc295YWY0" target="_blank">Mex Burritos</a> (Opção no Iguatemi)</li>   
             </ul>
         </div>
         <div class="lojas">
